# langame

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  pyproject.toml
backend/apps/accounts/: admin.py  models.py  serializers.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py
backend/apps/api/: serializers.py  urls.py  views.py
backend/apps/content/: admin.py  models.py
backend/apps/content/management/commands/: seed_demo.py
backend/apps/content/migrations/: 0001_initial.py
backend/apps/personalization/: apps.py  models.py
backend/apps/progress/: admin.py  models.py
backend/apps/progress/migrations/: 0001_initial.py
backend/config/: celery.py  urls.py
backend/config/settings/: base.py  dev.py  prod.py
docs/: api.md  architecture.md  data-model.md  design.md  personalization.md
mobile/: .env.example  .gitignore  App.tsx  app.json  package-lock.json  package.json
mobile/src/: config.ts  theme.ts
mobile/src/api/: client.ts
mobile/src/auth/: AuthContext.tsx  storage.ts
mobile/src/screens/: AuthScreen.tsx  HomeScreen.tsx  LessonScreen.tsx  MainNavigator.tsx  ProgressScreen.tsx
